# lightcode

./: .gitignore  Dockerfile  Makefile  README.md  mise.toml  pyproject.toml  sandbox.sh
src/lightcode/: __init__.py  clipboard.py  config.py  interrupt.py  logging.py  registry.py  repl.py  subagent.py  ui.py
src/lightcode/tools/: __init__.py  base.py  copy_file.py  delete_file.py  edit_file.py  file_info.py  find_files.py  grep.py  list_files.py  move_file.py  read_file.py  read_image.py  run_command.py  subagent.py  web_fetch.py  web_search.py  write_file.py
src/lightcode/tools/pptx/: __init__.py  _common.py  add_slide.py  create.py  duplicate_slide.py  export_image.py  find_text.py  layout.py  modify_slide.py  read.py
