[project]
name = "lightcode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tattsun", email = "dev.tattsun@gmail.com" }
]
dependencies = [
    "litellm>=1.81.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightcode"]

[project.scripts]
lightcode = "lightcode.repl:main"
