[project]
name = "lightcode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tattsun", email = "dev.tattsun@gmail.com" }
]
dependencies = [
    "litellm>=1.81.6",
    "rich>=14.0.0",
    "tavily-python>=0.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightcode"]

[project.scripts]
lightcode = "lightcode.repl:main"
